# dsd-feb-26-cohort

./: .gitignore  LICENSE  README.md  auth.md  erd.md  justfile  location_apis.md  package-lock.json  routing_comp.md
backend/: PROTECTED_ENDPOINTS.md  pyproject.toml
backend/src/api/: main.py  supabase_client.py  table.py
backend/src/api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/api/auth/: __init__.py  dependencies.py  router.py  supabase_auth.py
backend/src/api/routes/: customer_requests.py  customers.py  distance.py  driver_manifest.py  drivers.py  garbage_routes.py  planning.py  service_jobs.py  servicejobs.py  uploads.py
backend/src/model/: table.py
backend/src/services/: distance_service.py  driver_manifest_service.py  driver_service.py  planning_service.py  pullserviceloc_service.py  service_jobs_service.py  servicejob_service.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: auth.ts  customerServiceJobs.ts  driverManifest.ts  fetch.ts  http.ts
frontend/src/assets/: mockCustomer.ts  mockData.ts  mockDriver.ts
frontend/src/components/: DriverDashboard.tsx  LocationCard.tsx  Manifest.tsx  ManifestDetails.tsx  RouteDetails.tsx  RouteListCard.tsx  ServiceHistoryCard.tsx  ServiceIssuesCard.tsx  ServiceStatusCard.tsx  Sidebar.tsx  StopCard.tsx  sidebarItems.ts
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: CustomerPage.tsx  CustomerProofView.tsx  DriverManifest.tsx  Home.tsx  NotFound.tsx  UploadPage.tsx
(+5 files in other folders)
